fix: update checkbox styles for improved visibility and alignment

--- a/src/features/_unique-checkbox.scss
+++ b/src/features/_unique-checkbox.scss
@@ -8,7 +8,7 @@ input.task-list-item-checkbox {
   height: 10px;
   border-radius: 3px;
   border: none;
-  box-shadow: 0 0 0 1.5px var(--checkbox-border-color);
+  box-shadow: 0 0 0 1.5px var(--text-faint);
   position: relative;
   overflow: hidden;
   isolation: isolate;
@@ -47,7 +47,7 @@ input.task-list-item-checkbox::before {
 input[type="checkbox"]:checked:after {
   top: 0;
   inset-inline-start: -0.5px;
-  transform: scale(0.9) translate(-8%, -8%) !important;
+  transform: scale(0.9) translate(-12%, -12%) !important;
 }
 
 input.task-list-item-checkbox::after {
